  - Small tweak to comment and logging in DJabberd::Connection::ServerOut
    (Alex Vandiver <alexmv@bestpractical.com>)

  - Don't treat hostnames that look like 192.168.0.1.domain.com as IP
    addresses. (Reported by Domrachev Ivan <domrachev.ivan@gmail.com>).

  - new hook chain called "SendFeatures" allows plugins to add xml
    to the stream:features stanza returned by the server

  - new hook chain called "HandleStanza" allows plugins to register 
    for and then handle what would otherwise be unsupported-stanza-type

  - SSL memory leak fix (http://codereview.appspot.com/2326)

  - hook chain callback logging fix merged from 'kane-hacking' branch

0.84_01 (2009-07-31) dev release because it's beeen awhile

  - SARTAK caught a typo in BotContext.pm where a qr was used in a place
    that obviously should have been qq.

  - "use bytes" in Connection.pm, which reportedl fixes UTF-8
    corruption in rosters (Aleksey Luzin <subscr@p34.net>)

  - If an explicit configuration file location is given to djabberd,
    don't fall back on the built-in default locations. If the user
    wanted the defaults, he wouldn't have used the --conffile option.

  - Allow the location of the log4perl configuration file to be
    set via a command-line argument to djabberd.
    (Jakob Burkhart <igotimac@gmail.com>)

  - Correct support for re-using an S2S connection for multiple source
    domains. (Adrian Ulrich <slack@blinkenlights.ch>)

  - Jacob Burkhart <igotimac@gmail.com>: Fix memory leak when using SSL

  - Michael Scherer <misc@mandriva.org>: more helpful error
    messages in logs after dialback failure (shows hosts in question)

  - Piers Harding <piers@ompka.net>: Fix bug where server wasn't
    including a "from" attribute in IQ responses.

  - Multiple resources of the same local JID are now made aware of
    one another via presence stanzas as required by the spec.

  - don't leak UDP sockets on DNS SRV lookup timeouts
